<resources>
    <string name="app_name">7MinuteWorkout</string>
    <string name="start">START</string>
    <string name="image">start image</string>
    <string name="todo">TODO</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="_10">10</string>
    <string name="_30">30</string>
    <string name="excercises">Excercises</string>
    <string name="excercisename">ExcerciseName</string>
    <string name="excercisenamee">ExcerciseName</string>
    <string name="upcoming_excerecise">UPCOMING EXCERECISE:</string>
    <string name="_1">1</string>
    <string name="end">END</string>
    <string name="congratulation">Congratulation!</string>
    <string name="congratulations_you_have_done_the_workout">Congratulations! You have done the workout!</string>
    <string name="you_have_done_the_workout">You have completed the workout!</string>
    <string name="check_mark">check mark</string>
    <string name="finish">FINISH</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="this_will_stop_your_workout_you_ve_come_this_far_are_you_sure_you_want_to_quit">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="bmi">BMI</string>
    <string name="calculate">CALCULATE</string>
    <string name="weight_in_kg">WEIGHT (in Kg)</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="calculatee">CALCULATE</string>
    <string name="req">Required*</string>
    <string name="fif">15.00</string>
    <string name="us_units">US UNITS</string>
    <string name="metric">METRIC UNITS</string>
    <string name="history">HISTORY</string>
    <string name="calendar">calendar</string>
    <string name="date">DATE</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>
    <string name="exercise_completed">EXERCISE COMPLETED</string>
</resources>