<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMIActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_bmi_activity"
        android:layout_width="0dp"
        android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMetricUnitWeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/weight_in_kg"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/logoColor"
        app:hintTextColor="@color/logoColor"
        app:endIconMode="clear_text"
        app:helperText="@string/req"
        app:helperTextTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_bmi_activity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMetricUnitWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMetricUnitHeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilMetricUnitWeight"
        android:layout_marginStart="32dp"
        app:hintTextColor="@color/logoColor"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/height_in_cm"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/logoColor"

        app:endIconMode="clear_text"
        app:helperText="@string/req"
        app:helperTextTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilMetricUnitWeight">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMetricUnitHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/llDiplayBMIResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilMetricUnitHeight"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar_bmi_activity"
        tools:ignore="MissingConstraints"
        tools:visibility="visible">

    </LinearLayout>
    <!--positioned below llDiplayBMIResult-->

    <Button
        android:id="@+id/btnCalculateUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llDiplayBMIResult"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:backgroundTint="@color/logoColor"
        android:text="@string/calculatee"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilMetricUnitHeight"
        app:layout_constraintVertical_bias="0.929"
        tools:ignore="MissingConstraints,VisualLintButtonSize,TextContrastCheck" />

    <TextView
        android:id="@+id/tvBMIDescription"
        android:layout_width="338dp"
        android:layout_height="66dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCalculateUnits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBMIType"
        tools:ignore="TextContrastCheck"
        tools:text="Normal" />

    <TextView
        android:id="@+id/tvBMIType"
        android:layout_width="339dp"
        android:layout_height="63dp"
        android:layout_marginTop="32dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBMIValue"
        tools:ignore="TextContrastCheck,TextSizeCheck"
        tools:text="Normal" />

    <TextView
        android:id="@+id/tvBMIValue"
        android:layout_width="275dp"
        android:layout_height="42dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/logoColor"
        android:fontFamily="@font/lexend_zetta"
        app:layout_constraintBottom_toTopOf="@+id/btnCalculateUnits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvYourBMI"
        app:layout_constraintVertical_bias="0.062"
        tools:ignore="TextContrastCheck"
        tools:text="@string/fif" />

    <TextView
        android:id="@+id/tvYourBMI"
        android:layout_width="234dp"
        android:layout_height="24dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/your_bmi"
        android:textColor="@color/black"
        android:fontFamily="@font/lexend_zetta"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilMetricUnitHeight"
        tools:ignore="TextContrastCheck,TextSizeCheck" />




    <!--suppress AndroidUnknownAttribute -->


</androidx.constraintlayout.widget.ConstraintLayout>