<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ExcerciseActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarExcercise"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@drawable/background"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/logoColor" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/lexend_zetta"
        android:text="@string/get_ready_for"
        android:textColor="@color/white"
        android:textSize="@dimen/default_button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/flRestView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <FrameLayout
        android:id="@+id/flRestView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="268dp"
        android:background="@drawable/item_circular_accent_boarder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBarExcercise"
        app:layout_constraintVertical_bias="0.876">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/circular_progress_gray"
            android:indeterminate="true"
            android:indeterminateTint="@color/logoColor"
            android:max="10"
            android:progress="100"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:rotation="-90"
            android:theme="@style/ToolbarTheme" />

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/item_circular_color_accent_background"

            android:gravity="center">

            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/lexend_zetta"
                android:text="@string/_10"
                android:textColor="@color/white"

                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/tvUpcomingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_excerecise"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:gravity="center"
        android:textStyle="bold"
        android:fontFamily="@font/lexend_zetta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flRestView"
        app:layout_constraintBottom_toTopOf="@+id/tvUpcomingExcersieName"
        tools:visibility="visible"
         />

    <TextView
        android:id="@+id/tvUpcomingExcersieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lexend_zetta"
        android:gravity="center"
        android:text="Excercise Name"
        android:textColor="@color/logoColor"
        android:textSize="@dimen/default_button_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUpcomingLabel"
        tools:ignore="TextSizeCheck"
        tools:visibility="visible" />
    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/jumping_jacks"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tvExcerciseName"
        app:layout_constraintTop_toBottomOf="@+id/toolBarExcercise"
        android:contentDescription="@string/excercises" />

    <TextView
        android:id="@+id/tvExcerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="100dp"
        android:fontFamily="@font/lexend_zetta"
        android:text="@string/excercisenamee"
        android:textColor="@color/white"
        android:textSize="@dimen/default_button_text_size"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        tools:visibility="visible" />
    <FrameLayout
        android:id="@+id/flExcerciseView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/item_circular_accent_boarder"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvExcerciseName"

        app:layout_constraintVertical_bias="0.876"
        tools:visibility="visible">

        <ProgressBar
            android:id="@+id/progressBarExcercise"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"

            android:background="@drawable/circular_progress_gray"
            android:indeterminate="true"
            android:indeterminateTint="@color/logoColor"
            android:max="30"
            android:progress="300"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:rotation="-90"
            android:theme="@style/ToolbarTheme" />

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/item_circular_color_accent_background"

            android:gravity="center"
            tools:ignore="TextSizeCheck">


            <TextView
                android:id="@+id/tvTimerExcercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/lexend_zetta"
                android:foregroundGravity="center|center_horizontal"
                android:text="@string/_30"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExerciseStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flExcerciseView"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>